--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         return false;
       }
       httpRequest.onreadystatechange = LoadDCCon;
-      httpRequest.open('GET', "http://funzinnu.cafe24.com/stream/dccon.php");
+      httpRequest.open('GET', "https://bongzreal.github.io/dccon.php");
       httpRequest.send();
     }
     // 디시콘 불러오기 완료 함수
