--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     $(document).ready(function() {
       var dcconListUrl = getUrlParameter('dccon_list');
       if (dcconListUrl == undefined) {
-        dcconListUrl = 'http://lastorder.xyz/ChatAssistX-Client/opendccon.json';
+        dcconListUrl = 'http://bongzreal.github.io/dccon.json';
       }
       $.getJSON(dcconListUrl).done(function(data) {
           dcconList = data.dccons;
