--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         return false;
       }
       httpRequest.onreadystatechange = LoadDCCon;
-      httpRequest.open('GET', "http://funzinnu.cafe24.com/stream/dccon.php");
+      httpRequest.open('GET', "https://gist.githubusercontent.com/bongzreal/1559bd475d5ef30498d5a65334675b69/raw/c7a68116c757d20a3e0b0d3005a89cdbc9459d84/dccon_list.json");
       httpRequest.send();
     }
     // 디시콘 불러오기 완료 함수
