--- a/lolchampcon_selector.html
+++ b/lolchampcon_selector.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,minimum-scale=1.0" />
-  <title>디시콘 선택기</title>
+  <title>콘 선택기</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.3.7/css/bootstrap.min.css">
   <style>
 
